--- a/index.html
+++ b/index.html
@@ -1,69 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Destinations</title>
-    <link rel="stylesheet" href="day3task.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
-
-
-    <div class="navbar">
-        <h2 class="logo">TravelWorld</h2>
-        <a href="day2.html">Home</a>
-        <a href="index.html">Destinations</a>
-        <a href="index2.html">Contact</a>
-    </div>
-
-    <h1 class="title">Popular Destinations</h1>
-
-    <div class="places">
-
-        <div class="card">
-            <img
-                src="https://images.pexels.com/photos/346885/pexels-photo-346885.jpeg?cs=srgb&dl=pexels-nurseryart-346885.jpg&fm=jpg">
-            <h3>Paris, France</h3>
-            <p>City of love, culture & beauty.</p>
-        </div>
-
-        <div class="card">
-            <img
-                src="https://images.pexels.com/photos/3278215/pexels-photo-3278215.jpeg?cs=srgb&dl=pexels-freestockpro-3278215.jpg&fm=jpg">
-            <h3>Maldives</h3>
-            <p>Clear waters & luxury resorts.</p>
-        </div>
-
-        <div class="card">
-            <img
-                src="https://img.freepik.com/free-photo/beautiful-girl-standing-boat-looking-mountains-ratchaprapha-dam-khao-sok-national-park-surat-thani-province-thailand_335224-849.jpg?semt=ais_hybrid&w=740&q=80">
-            <h3>New York, USA</h3>
-            <p>The city that never sleeps.</p>
-        </div>
-        <div class="card">
-            <img
-                src="https://images.pexels.com/photos/2870167/pexels-photo-2870167.jpeg?cs=srgb&dl=pexels-parv-choudhary-724334-2870167.jpg&fm=jpg">
-            <h3>india</h3>
-            <p>india is a vibrant, the world largest democracy</p>
-        </div>
-        <div class="card">
-            <img
-                src="https://media.gettyimages.com/id/155445312/photo/london-on-the-move.jpg?s=612x612&w=gi&k=20&c=nsdmMYEd8oSiI_6lZY2efTVciMS-GuARqiVBFjBsjQk=">
-            <h3>England</h3>
-            <p>Enjoying the natural beauty of the coast</p>
-        </div>
-        <div class="card">
-            <img
-                src="https://media.gettyimages.com/id/521660572/photo/beach-in-goa-india.jpg?s=612x612&w=0&k=20&c=ZDhXkWv5cBzOsU52XbL7EVgy0QVriqdtOCrC1nlqmf4=">
-            <h3>Goa</h3>
-            <p>state of India</p>
-        </div>
-    </div>
-
-
-
+   
+     <div class="container">
+          <div clas="child child-1"></div>
+       <div class="child child-2"></div>
+        <div class="child child-3"></div>
+        <div class="child child-4"></div>
+        <div class="child child-5"></div>
+        <div class="child child-6"></div>
+        <div class="child child-7"></div>
+        <div class="child child-8"></div>
+        <div class="child child-9"></div>
+        <div class="child child-10"></div>
+   
+     </div>
+    
 </body>
-
 </html>
