--- a/chesstask.html
+++ b/chesstask.html
@@ -1,91 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./chesstask.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./chesstask.css">
 </head>
+
 <body>
   <div class="board">
-  <!-- row 1 -->
-  <div class="square dark">
-    <img width="30" height="30" src="https://img.icons8.com/ios-filled/50/king.png" alt="king"/>
+    <!-- row 1 -->
+    <div class="square dark">
+      <img width="30" height="30" src="https://img.icons8.com/ios-filled/50/king.png" alt="king" />
+    </div>
+    <div class="square light">
+      <img width="30" height="30" src="https://img.icons8.com/glyph-neue/64/knight.png" alt="knight" />
+    </div>
+    <div class="square dark">
+      <img width="30" height="30" src="https://img.icons8.com/ios-filled/50/king.png" alt="king" />
+
+    </div>
+
+    <div class="square light"><img width="40" height="40" src="https://img.icons8.com/glyph-neue/64/king.png"
+        alt="king" /></div>
+    <div class="square dark"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/queen.png"
+        alt="queen" /></div>
+    <div class="square light"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/king.png"
+        alt="king" /></div>
+    <div class="square dark"> <img width="30" height="30" src="https://img.icons8.com/glyph-neue/64/knight.png"
+        alt="knight" /></div>
+    <div class="square light"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/rook.png"
+        alt="rook" /></div>
+
+    <!-- row 2 -->
+    <div class="square light">
+      <img width="30" height="30" src="https://img.icons8.com/ios-filled/50/bishop.png" alt="bishop" />
+    </div>
+    <div class="square dark"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/bishop.png"
+        alt="bishop" /></div>
+    <div class="square light"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/bishop.png"
+        alt="bishop" /></div>
+    <div class="square dark"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/bishop.png"
+        alt="bishop" /></div>
+    <div class="square light"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/bishop.png"
+        alt="bishop" /></div>
+    <div class="square dark"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/bishop.png"
+        alt="bishop" /></div>
+    <div class="square light"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/bishop.png"
+        alt="bishop" /></div>
+    <div class="square dark"><img width="30" height="30" src="https://img.icons8.com/ios-filled/50/bishop.png"
+        alt="bishop" /></div>
+
+    <!-- empty rows -->
+    <!-- repeat empty squares 4 rows -->
+    <!-- row 3–6 -->
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+    <div class="square light"></div>
+    <div class="square dark"></div>
+
+    <!-- row 7 -->
+    <div class="square dark">
+      <img width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn" />
+    </div>
+    <div class="square light">
+      <img width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn" />
+    </div>
+    <div class="square dark"> <img width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn" />
+    </div>
+    <div class="square light"> <img width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn" />
+    </div>
+    <div class="square dark">
+      <img width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn" />
+    </div>
+    <div class="square light"> <img width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn" />
+    </div>
+    <div class="square dark">
+      <img width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn" />
+    </div>
+    <div class="square light">
+      <img width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn" />
+    </div>
+
+    <!-- row 8 -->
+    <div class="square light"><img width="30" height="30" src="https://img.icons8.com/ios/50/rook.png" alt="rook" />
+    </div>
+    <div class="square dark"><img width="30" height="30" src="https://img.icons8.com/ios/50/knight.png" alt="knight" />
+    </div>
+    <div class="square light"><img width="30" height="30" src="https://img.icons8.com/ios/50/king.png" alt="king" />
+    </div>
+    <div class="square dark"><img width="35" height="35" src="https://img.icons8.com/parakeet-line/48/king.png"
+        alt="king" /></div>
+    <div class="square light"><img width="30" height="30" src="https://img.icons8.com/ios/50/queen.png" alt="queen" />
+    </div>
+    <div class="square dark"><img width="30" height="30" src="https://img.icons8.com/ios/50/king.png" alt="king" />
+    </div>
+    <div class="square light"><img width="30" height="30" src="https://img.icons8.com/ios/50/knight.png" alt="knight" />
+    </div>
+    <div class="square dark"><img width="30" height="30" src="https://img.icons8.com/ios/50/rook.png" alt="rook" />
+    </div>
   </div>
-  <div class="square light">
-    <img width="30" height="30" src="https://img.icons8.com/glyph-neue/64/knight.png" alt="knight"/>
-  </div>
-  <div class="square dark">♝</div>
-  <div class="square light">♛</div>
-  <div class="square dark">♚</div>
-  <div class="square light">♝</div>
-  <div class="square dark">♞</div>
-  <div class="square light">♜</div>
 
-  <!-- row 2 -->
-  <div class="square light">♟</div>
-  <div class="square dark">♟</div>
-  <div class="square light">♟</div>
-  <div class="square dark">♟</div>
-  <div class="square light">♟</div>
-  <div class="square dark">♟</div>
-  <div class="square light">♟</div>
-  <div class="square dark">♟</div>
 
-  <!-- empty rows -->
-  <!-- repeat empty squares 4 rows -->
-  <!-- row 3–6 -->
-  <div class="square dark"></div><div class="square light"></div>
-  <div class="square dark"></div><div class="square light"></div>
-  <div class="square dark"></div><div class="square light"></div>
-  <div class="square dark"></div><div class="square light"></div>
-
-  <div class="square light"></div><div class="square dark"></div>
-  <div class="square light"></div><div class="square dark"></div>
-  <div class="square light"></div><div class="square dark"></div>
-  <div class="square light"></div><div class="square dark"></div>
-
-  <div class="square dark"></div><div class="square light"></div>
-  <div class="square dark"></div><div class="square light"></div>
-  <div class="square dark"></div><div class="square light"></div>
-  <div class="square dark"></div><div class="square light"></div>
-
-  <div class="square light"></div><div class="square dark"></div>
-  <div class="square light"></div><div class="square dark"></div>
-  <div class="square light"></div><div class="square dark"></div>
-  <div class="square light"></div><div class="square dark"></div>
-
-  <!-- row 7 -->
-  <div class="square dark">
-    <img  width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn"/>
-  </div>
-  <div class="square light">
-     <img  width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn"/>
-  </div>
-  <div class="square dark"> <img  width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn"/></div>
-  <div class="square light"> <img  width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn"/></div>
-  <div class="square dark">
-     <img  width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn"/>
-  </div>
-  <div class="square light"> <img  width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn"/></div>
-  <div class="square dark">
-     <img  width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn"/>
-  </div>
-  <div class="square light">
-     <img  width="30" height="30" src="https://img.icons8.com/ios/50/pawn.png" alt="pawn"/>
-  </div>
-
-  <!-- row 8 -->
-  <div class="square light">♖</div>
-  <div class="square dark">♘</div>
-  <div class="square light">♗</div>
-  <div class="square dark">♕</div>
-  <div class="square light">♔</div>
-  <div class="square dark">♗</div>
-  <div class="square light">♘</div>
-  <div class="square dark">♖</div>
-</div>
-
- 
 </body>
+
 </html>
